Monografia com as considerações finais

--- a/conteudo/conclusao.tex
+++ b/conteudo/conclusao.tex
@@ -1,9 +1,13 @@
 \chapter{Considerações Finais}
 \label{chap:conclusao}
-Espera-se que o uso do estilo de formata\c{c}\~ao \LaTeX\ adequado \`as Normas para Elabora\c{c}\~ao de Trabalhos de Conclusão de Curso dos estudantes de Engenharia de Computação, da UEFS ({\ttfamily abnt-uefs.cls}) facilite a escrita de documentos no \^ambito desta institui\c{c}\~ao e aumente a produtividade de seus autores. Para usu\'arios iniciantes em \LaTeX, al\'em da bibliografia especializada j\'a citada, existe ainda uma s\'erie de recursos~\cite{CTAN2009} e fontes de informa\c{c}\~ao~\cite{TeX-Br2009,Wikibooks2009} dispon\'iveis na Internet.
 
-Recomenda-se o editor de textos Kile como ferramenta de composi\c{c}\~ao de documentos em \LaTeX\ para usu\'arios Linux. Para usu\'arios Windows recomenda-se o editor \TeX nicCenter~\cite{TeXnicCenter2009}. O \LaTeX\ normalmente j\'a faz parte da maioria das distribui\c{c}\~oes Linux, mas no sistema operacional Windows \'e necess\'ario instalar o software MiK\TeX~\cite{MiKTeX2009}.
+O presente trabalho é fruto de um projeto de iniciação científica desenvolvido em uma parceria entre o Laboratório de Computação de Alto Desempenho(\sigla{LACAD}{Laboratório de Computação de Alto Desempenho}) e o Laboratório de Modelagem Molecular (\sigla{LMM}{Laboratório de Modelagem Molecular}) da UEFS, no qual foi proposto o estudo e implementação de um algoritmo para o sistema NatProDB visando possibilitar ao sistema a realização de uma triagem virtual de moléculas a partir do conceito de similaridade molecular. O sistema desenvolvido neste trabalho  permite aos pesquisadores construírem localmente suas próprias bases de dados, e selecionar dentro do seu banco moléculas similares aos ligantes de seu interesse para realização de estudos. 
 
-Al\'em disso, recomenda-se o uso de um gerenciador de refer\^encias como o JabRef~\cite{JabRef2009} ou Mendeley~\cite{Mendeley2009} para a cataloga\c{c}\~ao bibliogr\'afica em um arquivo Bib\TeX, de forma a facilitar cita\c{c}\~oes atrav\'es do comando {\ttfamily \textbackslash cite\{\}} e outros comandos correlatos do pacote abn\TeX. A lista de refer\^encias deste documento foi gerada automaticamente pelo software \LaTeX\ + Bib\TeX\ a partir do arquivo {\ttfamily abnt-uefs.bib}, que por sua vez foi composto com o gerenciador de refer\^encias JabRef.
+A aplicação de uma abordagem de comparação de moléculas 2D proposta neste trabalho simplifica  a computação de similaridade molecular, uma vez que, permite a utilização de descritores moleculares lineares como as fingerprints, e também a aplicação de técnicas de comparação como o Coeficiente de Tversky ou até mesmo o Coeficiente de Tanimoto, que calculam a similaridade entre estruturas através da contagem de características/grupos funcionais presentes em cada molécula. Entretanto, tal modelo sofre de algumas limitações a serem consideradas, como por exemplo: a variação de conformações de uma dada molécula podem gerar coeficientes de similaridade altos somente para determinadas conformações, ou seja, mesmo compartilhando uma estrutura molecular parecida, as moléculas são similares somente para alguns estados conformacionais \cite{rodrigues2012}. Além disso, por se tratar de uma comparação baseada em contagem de características e avaliação estrutural das moléculas, questões como rotações, propriedades intrínsecas de alguns compostos, e até mesmo átomos quirais, não são tratadas pelo algoritmo implementado no sistema, o que pode ocasionar obtenção de índices de similaridade altos entre duas estruturas que não necessariamente possuem atividades biológicas semelhantes. Tais deficiências podem ser solucionadas através da utilização de abordagens híbridas que além da comparação estrutural 2D, consideram propriedades intrínsecas de cada composto obtidas via processamento de descritores 3D, mas que não necessariamente podem ser estendidos  como solução para todos os possíveis casos.
 
-O estilo de formata\c{c}\~ao \LaTeX\ do curso de Engenharia de Computação da UEFS foi elaborados por João Carlos Nunes Bittencourt (joaocarlos@ecomp.uefs.br), e este exemplo de utiliza\c{c}\~ao adaptado de Diogo Rosa Kuiaski (diogo.kuiaski@gmail.com) e Hugo Vieira Neto (hvieir@utfpr.edu.br). Sugest\~oes de melhorias s\~ao bem-vindas.
+Apesar das limitações citadas anteriormente, o método implementado no NatProDB é uma abordagem bastante difundida na literatura, e já vem sendo utilizada inclusive por sistemas consolidados na comunidade científica como o PubChem por exemplo. Além disso, devido a escassez de ferramentas gratuitas que se proponham a fornecer um ambiente computacional onde o pesquisador possa controlar e gerenciar as suas moléculas, assim como realizar triagem em bancos locais através do conceito de similaridade molecular, o sistema desenvolvido surge como uma ferramenta para auxiliar esses pesquisadores desenvolverem seus estudos e até mesmo criarem  base de dados com estruturas de sua propriedade para posterior publicação.
+
+Embora o sistema NatProDB já venha sendo utilizado por pesquisadores do LMM, esse projeto evoluiu de forma a abarcar não somente o estudo de estruturas moleculares localmente, mas também permitir a difusão das moléculas oriundas do semi-árido baiano para a comunidade científica em geral. Nesse sentido, recentemente foi criado um ambiente web para o NatProDB, que fornece a possibilidade de acesso a um catalogo de moléculas extraídas de fontes naturais endêmicas do oriundas  do bioma semi-árido. Como próximos passos deste projeto, o grupo pretende adaptar o algorítimo implementado no sistema local também na versão web, assim como adaptar métodos de comparação de estruturas em 3D visando assim suprir algumas das deficiências citadas anteriormente.     
+     
+
+  
