--- a/indexMonografia.tex
+++ b/indexMonografia.tex
@@ -36,13 +36,13 @@
     \capa % geração automática da capa
     \folhaderosto % geração automática da folha de rosto
     
-    \input{pretextuais/dedicatoria}
-    \input{pretextuais/agradecimentos}
+   % \input{pretextuais/dedicatoria}
+   % \input{pretextuais/agradecimentos}
     \input{pretextuais/resumo}
     \input{pretextuais/abstract}
     \listadefiguras % geracao automatica da lista de figuras
     \listadetabelas % geracao automatica da lista de tabelas
-    \listadesimbolos % geracao automatica da lista de símbolos
+  %  \listadesimbolos % geracao automatica da lista de símbolos
     \listadesiglas % % geracao automatica da lista de siglas
     % sumario
     \sumario % geracao automatica do sumario
@@ -51,7 +51,7 @@
   % \input{conteudo/desenvolvimento}
     \input{conteudo/metodologia}
     \input{conteudo/resultados}
-    \input{conteudo/conclusao}
+   \input{conteudo/conclusao}
     % Aqui começa a bibliografia da monografia
     \bibliographystyle{abnt-alf}
     \bibliography{abnt-uefs}
