--- a/pretextuais/capa.tex
+++ b/pretextuais/capa.tex
@@ -20,7 +20,7 @@
 \documento{Trabalho de Conclusão de Curso} % tipo de documento
 \titulacao{Bacharel} % [Bacharel]
 
-\titulo{IMPLEMENTAÇÃO DE ALGORITMOS PARA CÁLCULO DE SIMILARIDADE NO SISTEMA NATPRODB} % titulo do trabalho em portugues
+\titulo{IMPLEMENTAÇÃO DE ALGORITMO PARA CÁLCULO DE SIMILARIDADE MOLECULAR NO SISTEMA NATPRODB} % titulo do trabalho em portugues
 \subtitulo{} % caso necessário um sub-título, utilize este campo
 \title{Title in English} % titulo do trabalho em ingles
 
