--- a/abnt-uefs.bib
+++ b/abnt-uefs.bib
@@ -4,23 +4,6 @@
 % Exemplo: 18 fev. 2011, com excessão de maio
 % Meses que aparecem em publicações, como periódicos, também devem ser abrevidados.
 
-@MISC{abnTeX2009,
-  author = {abnTeX},
-  title = {Absurdas normas para \TeX},
-  year = {2009},
-  owner = {Hugo},
-  timestamp = {2009.11.08},
-  url = {http://sourceforge.net/apps/ mediawiki/abntex/index.php},
-  urlaccessdate = {8 nov. 2011}
-}
-@inproceedings{davis2006relationship,
-  title={The relationship between Precision-Recall and ROC curves},
-  author={Davis, Jesse and Goadrich, Mark},
-  booktitle={Proceedings of the 23rd international conference on Machine learning},
-  pages={233--240},
-  year={2006},
-  organization={ACM}
-}
 @inproceedings{davis2006relationship,
   title={The relationship between Precision-Recall and ROC curves},
   author={Davis, Jesse and Goadrich, Mark},
@@ -131,15 +114,15 @@
   year={2004},
   organization={IEEE}
 }
-
-@MISC{BibTeX2009,
-  author = {BibTeX},
-  title = {Bib\TeX.org},
-  year = {2009},
-  owner = {Hugo},
-  timestamp = {2009.11.08},
-  url = {http://www.bibtex.org},
-  urlaccessdate = {8 nov. de 2011}
+@article{maggiora2013molecular,
+  title={Molecular Similarity in Medicinal Chemistry: Miniperspective},
+  author={Maggiora, Gerald and Vogt, Martin and Stumpfe, Dagmar and Bajorath, Jürgen},
+  journal={Journal of medicinal chemistry},
+  volume={57},
+  number={8},
+  pages={3186--3204},
+  year={2013},
+  publisher={ACS Publications}
 }
 
 @article{mestres1997mimic,
@@ -170,16 +153,6 @@
   timestamp = {2009.11.08}
 }
 
-@MISC{CTAN2009,
-  author = {CTAN},
-  title = {The comprehensive \TeX\ archive network},
-  year = {2009},
-  owner = {Hugo},
-  timestamp = {2009.11.08},
-  url = {http://www.ctan. org},
-  urlaccessdate = {8 nov. de 2011}
-}
-
 @BOOK{DAELN2006,
   title = {Normas de apresenta\c{c}\~ao de trabalhos acad\^emicos do {DAELN}},
   publisher = {Departamento Acad\^emico de Eletr\^onica da UTFPR},
@@ -203,27 +176,6 @@
   timestamp = {2009.11.08}
 }
 
-@MISC{JabRef2009,
-  author = {JabRef},
-  title = {JabRef reference manager},
-  year = {2009},
-  owner = {Hugo},
-  timestamp = {2009.11.08},
-  url = {http://jabref.sourceforge.net},
-  urlaccessdate = {8 nov. 2011}
-}
-
-@BOOK{Kopka2003,
-  title = {Guide to \LaTeX},
-  publisher = {Addison-Wesley},
-  year = {2003},
-  author = {Kopka, Helmut and Daly, Patrick W.},
-  address = {Boston},
-  edition = {4},
-  owner = {Hugo},
-  timestamp = {2009.11.08}
-}
-
 @BOOK{Lamport1986,
   title = {\LaTeX: \normalfont a document preparation system},
   publisher = {Addison-Wesley},
@@ -232,36 +184,6 @@
   address = {Boston},
   owner = {Hugo},
   timestamp = {2009.11.08}
-}
-
-@MISC{LaTeX2009,
-  author = {LaTeX},
-  title = {The \LaTeX\ project},
-  year = {2009},
-  owner = {Hugo},
-  timestamp = {2009.11.08},
-  url = {http://www.latex-project.org},
-  urlaccessdate = {8 nov. de 2011}
-}
-
-@MISC{Mendeley2009,
-  author = {Mendeley},
-  title = {Mendeley: \normalfont academic software for research papers},
-  year = {2009},
-  owner = {Hugo},
-  timestamp = {2009.11.08},
-  url = {http://www.mendeley.com},
-  urlaccessdate = {8 nov. de 2011}
-}
-
-@MISC{MiKTeX2009,
-  author = {MiKTeX},
-  title = {The MiK\TeX\ project},
-  year = {2009},
-  owner = {Hugo},
-  timestamp = {2009.11.08},
-  url = {http://www.miktex.org},
-  urlaccessdate = {8 nov. de 2011}
 }
 
 @BOOK{Mittelbach2004,
@@ -274,47 +196,6 @@
   edition = {2},
   owner = {Hugo},
   timestamp = {2009.11.08}
-}
-
-@MISC{TeX-Br2009,
-  author = {TeX-BR},
-  title = {Comunidade \TeX-Br},
-  year = {2009},
-  owner = {Hugo},
-  timestamp = {2009.11.08},
-  url = {http://www.tex-br.org/index.php},
-  urlaccessdate = {8 nov. 2011}
-}
-
-@MISC{TeXnicCenter2009,
-  author = {TeXnicCenter},
-  title = {\TeX nicCenter: \normalfont the center of your \LaTeX\ universe},
-  year = {2009},
-  owner = {Hugo},
-  timestamp = {2009.11.08},
-  url = {http://www.texniccenter.org},
-  urlaccessdate = {8 nov. 2011}
-}
-
-@BOOK{UTFPR2008,
-  title = {Normas para elabora\c{c}\~ao de trabalhos acad\^emicos},
-  publisher = {Universidade Tecnol\'ogica Federal do Paran\'a},
-  year = {2008},
-  editor = {Reitoria},
-  author = {UTFPR},
-  address = {Curitiba},
-  owner = {Hugo},
-  timestamp = {2009.11.08}
-}
-
-@MISC{Wikibooks2009,
-  author = {Wikibooks},
-  title = {\LaTeX},
-  year = {2009},
-  owner = {Hugo},
-  timestamp = {2009.11.08},
-  url = {http://en.wikibooks.org/wiki/LaTeX},
-  urlaccessdate = {8 nov. 2011}
 }
 
 @Article{rodrigues2012,
