--- a/pretextuais/abstract.tex
+++ b/pretextuais/abstract.tex
@@ -1,11 +1,10 @@
 \begin{abstract}
-The developing process of a medicine is made of different stages, that come from the project
+The developing process of a medicine has many stages. Since the project
 and study of a possible pharmacophore compound until its synthesizing. Most efforts on the
-development of a new medicine are made in assisted way troughthrough computers. The
+development of a new medicine are aided by computers. The
 computational tools allow the researchers both cataloguing in a more efficient way their study
-structures and evaluate in a faster way biochemical, structural characteristics, and the
-molecules behavior during structural variations. Besides this, the tools also help in the search for similar structures, that is a concept in most efforts in a new medicine project are based.
+structures and evaluate in a faster way biochemical, structural features, and the
+molecules behavior during structural variations.Moreover, some of these tools also helps in the search for similar structures, that is a key concept in which most efforts towards to develop a new medicine are based.
 This work describes the adaptation of appropriate algorithms for computing molecular
-similarities in a software developed for the tabulation of molecules in a database, aiming to
-allow the researcher to browse, in his own database, similar structures to the ones that are in his study concerns. A differential in this work is that this tool will be made freely available to any user, and due the inner characteristics of its implementation, face to other tools that exist with the same purpose, this software will not need much hardware resources for its execution, in other words, it is compatible with common computers, and also with any operational system used by the researcher. Briefly, the system will work in such manner: once the molecules are registered in the user database, the researcher will be able to verify in his base if there are structures with a desired degree of similarity to the molecule inserted for consultation. The system converts the inserted molecule, and the presents in the database, in fingerprints for the application of Tanimoto's metric, to obtain a table of similarity, returning finally to the researcher all the molecules in his database that have a degree of similarity equal or superior to the one desired (relating to the entrance molecule). 
+similarities in a software developed for molecules tabulation in a database enabling the researcher to screen similar structures to the ones that are in his study concerns at his own database. A differential in this work lies in the fact that this tool is made freely available to any user, and due the inner characteristics of its implementation, face to others tools that exist with the same purpose, this software does not need much hardware resources to run, in other words, it is compatible with common computers, and any operational system used by the researcher. In resume, the system works according to these steps: once the molecules are registered in the user database, the researcher is able to verify in his base if there are structures with a desired degree of similarity to the molecule queried. So, the system converts the inserted molecule, and those ones in the database in fingerprints format in order to use the Tversky's metrics obtaining a table of similarity, and finally retrieving to the researcher all molecules in his database whose similarity coefficient  it is equal or superior to the one desired (regarded to the queried molecule). 
 \end{abstract}
